--- a/components/mobile-menu.html
+++ b/components/mobile-menu.html
@@ -6,6 +6,6 @@
     <a class="mobile-link"
        href="https://sheetsresume.com/r/smart-career-tools"
        target="_blank"
-       rel="noopener noreferrer"> <img class="icon-mobile" src="/img/iconos/link.png" alt="sheetsresume.com"> Crea tu CV
+       rel="noopener noreferrer"> <img class="icon-mobile" src="/img/iconos/cv.png" alt="sheetsresume.com"> Crea tu CV
     </a>
-  </div>
+  </div> 
