--- a/styles.css
+++ b/styles.css
@@ -1027,3 +1027,8 @@ body.is-navigating #menu-overlay {
   transform: translateY(2px);
   margin-left: 6px;
 }
+
+
+
+.bullet{
+   margin-left: -10px; font-family: 'Courier New', Courier, monospace; font-size: 6px;display:flex; transform: translateY(15px);}
